--- a/recruit-gui/src/app/email/email.component.html
+++ b/recruit-gui/src/app/email/email.component.html
@@ -1,5 +1,9 @@
-<div class=".container m-2X pageX">
-	<div class='content-div'>
+<div class="page">
+
+	<!-- Nav options -->
+	<div class="nav-tabs-bar"></div>
+	
+	<div class='page-body'>
 		<div class="email-buttons">
 			<div class="action-buttons" *ngIf="currentView == 'view-inbox'">
 				
