--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -1,24 +1,27 @@
-<div class=".container m-2" >
-
-	<ul class="nav nav-tabs">
-	  <li class="nav-item">
-	    <span class="nav-link tabNav" (click)="switchTab('recruiters')">Recruiters</span>
-	  </li>
-	  <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('candidates')">Candidates</span>
-	  </li>
-	  <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability</span>
-	  </li>
-	<li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('skillValidation')">Skills</span>
-	  </li>
-	   <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription</span>
-	  </li>
-	</ul>
+<div class="page">
+	<!-- Nav options -->
+	<div class="nav-tabs-bar">
+		<ul class="nav nav-tabs">
+		  <li class="nav-item">
+		    <span class="nav-link tabNav" (click)="switchTab('recruiters')">Recruiters</span>
+		  </li>
+		  <li class="nav-item tabNav">
+		    <span class="nav-link" (click)="switchTab('candidates')">Candidates</span>
+		  </li>
+		  <li class="nav-item tabNav">
+		    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability</span>
+		  </li>
+		<li class="nav-item tabNav">
+		    <span class="nav-link" (click)="switchTab('skillValidation')">Skills</span>
+		  </li>
+		   <li class="nav-item tabNav">
+		    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription</span>
+		  </li>
+		</ul>
+	</div>
 	
-	<!-- Recruiters-->
+	<div class="page-body">
+		<!-- Recruiters-->
 	<div *ngIf="showRecruitersTab">
 		<table>
 			<thead>
@@ -279,5 +282,6 @@
 			</tbody>
 		</table>
 	<div>
+	</div>
 	
 </div>
