--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -1,6 +1,6 @@
 <div class="page">
 	<!-- Nav options -->
-	<div>
+	<div class="nav-tabs-bar">
 		<ul class="nav nav-tabs">
 		  <li class="nav-item">
 		    <span class="nav-link tabNav tabNavActive" *ngIf="showDemand  && unseenOpenPositions > 0" (click)="switchTab('showDemand')"><span class="unseen-posts">{{unseenOpenPositions}}</span>Requested Candidates</span>
@@ -16,18 +16,19 @@
 		  </li>
 		</ul>
 	</div>
-	<div class="container-div">
+	<div class="page-body">
 	
 		<!-- Supply -->
 		<div *ngIf="showSupply">
+			<div class="action-buttons">
+				<button class="btn btn-secondary action-btn  main-action_btn" 	(click)="switchTab('addSupply')" 	*ngIf="!isAuthenticatedAsAdmin()">Offer Candidate</button>
+			</div>
 			<p>
 			Do you have candidates that you cannot currently place? Would you like to make these candidates available
 			to other recruiters for a rate set by you? If so this feature is for you. Add your available candidates and 
 			allow other recruiters to contact you with available projects.  
 			</p>
-			<div class="action-buttons">
-				<button class="btn btn-secondary action-btn  main-action_btn" 	(click)="switchTab('addSupply')" 	*ngIf="!isAuthenticatedAsAdmin()">Offer Candidate</button>
-			</div>
+			
 			<!-- List of offered Candidates -->
 			<div>
 				<table class="table marketplace-table">
@@ -59,21 +60,17 @@
 		</div>
 		<!-- Show Demand  -->
 		<div *ngIf="showDemand">
-			<p>
-			Do you have a position that you currently cannot fill? Would you like other Recruiters to be able to contact you 
-			with their available candidates in order to help you will the position. If so this feature is for you. Add details 
-			of the position you are trying to fill and allow other Recruiters to contact you with suitable candidates.  
-			</p>
 			<div class="action-buttons">
 				<button class="btn btn-secondary action-btn" 					(click)="showJustMyOpenPositions()" 	*ngIf="!showJustMyOpenPositionsActive">My Candidates</button>
 				<button class="btn btn-secondary action-btn" 					(click)="fetchOpenPositions()" 		*ngIf="showJustMyOpenPositionsActive">All Candidates</button>
 				<button class="btn btn-secondary action-btn main-action_btn" 	(click)="switchTab('addDemand')" *ngIf="!isAuthenticatedAsAdmin() && passedCreditCheck">Request Candidate</button>
 				<button class="btn btn-secondary action-btn main-action_btn" 	(click)="showNoCredits()" *ngIf="!isAuthenticatedAsAdmin() && !passedCreditCheck">Request Candidate</button>
 			</div>
-			<!-- List of Requested Candidates -->
-			<div>
-			
-			</div>
+			<p>
+			Do you have a position that you currently cannot fill? Would you like other Recruiters to be able to contact you 
+			with their available candidates in order to help you will the position. If so this feature is for you. Add details 
+			of the position you are trying to fill and allow other Recruiters to contact you with suitable candidates.  
+			</p>
 			<!-- Request Candidate -->
 			<div>
 				<table class="table marketplace-table">
@@ -201,203 +198,129 @@
 				</table>
 			</form>
 		</div>
-	</div>
-	<!-- Edit Demand  -->
-	<div *ngIf="editDemand">
-		<h3>Update Requested Candidate</h3>
-		<div class="action-buttons">
-			<button class="btn btn-secondary btnRight {{suggestionMobileBtnClass}}" (click)="publishOpenPosition()">Update</button>
-			<button class="btn btn-secondary btnRight {{suggestionMobileBtnClass}}" (click)="showOpenPositions()">Back</button>
+		<!-- Edit Demand  -->
+		<div *ngIf="editDemand">
+			<h3>Update Requested Candidate</h3>
+			<div class="action-buttons">
+				<button class="btn btn-secondary btnRight {{suggestionMobileBtnClass}}" (click)="publishOpenPosition()">Update</button>
+				<button class="btn btn-secondary btnRight {{suggestionMobileBtnClass}}" (click)="showOpenPositions()">Back</button>
+			</div>
+			<form [formGroup]="requestedCandidateFormBean">
+				<table class="table marketplace-table">
+					<tr>
+						<td>Position Title</td>
+						<td>
+							<input formControlName="positionTitle" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Country</td>
+						<td>
+							<select formControlName="country">
+								<option></option>
+								<option value="BELGIUM">Belgium</option>
+								<option value="IRL">Ireland</option>
+								<option value="NETHERLANDS">Netherlands</option>
+								<option value="UK">UK</option>
+								<option value="EUROPE">EU</option>
+								<option value="WORLD">World</option>
+							</select>
+						</td>	
+					</tr>
+					<tr>
+						<td>Location</td>
+						<td>
+							<input formControlName="location" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Contract Type</td>
+						<td>
+							<select  formControlName="contractType">
+								<option></option>
+								<option value="CONTRACT">Contract</option>
+								<option value="PERM">Perm</option>
+								<option value="BOTH">Both</option>
+							</select>
+						</td>	
+					</tr>
+					<tr>
+						<td>
+							Skills
+						</td>
+						<td class="sugg-srch-bdy">
+							<input type="text" formControlName="skill"><button (click)="addOfferedPositionSkill()" class="btn btn-secondary add-skill-btn" *ngIf="!isAuthenticatedAsAdmin()">Add</button>
+							<div style="min-height:35px;">
+								<div class="selected-skill" *ngFor="let skill of requestedCandidateCoreSkills" (click)="removeRequestedCandidateSkill(skill)">{{skill}}</div>
+							</div>
+						</td>	
+					</tr>
+					<tr>
+						<td>Salary / Rate</td>
+						<td>
+							<input formControlName="renumeration" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Start Date</td>
+						<td>
+							<input formControlName="startDate" type="date"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Position Closing Date</td>
+						<td>
+							<input formControlName="positionClosingDate" type="date"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Description</td>
+						<td>
+							<textarea formControlName="description"></textarea>
+						</td>	
+					</tr>
+					<tr>
+						<td>Comments</td>
+						<td>
+							<textarea formControlName="comments"></textarea>
+						</td>	
+					</tr>
+				</table>
+			</form>
 		</div>
-		<form [formGroup]="requestedCandidateFormBean">
-		<table class="table marketplace-table">
-			<tr>
-				<td>Position Title</td>
-				<td>
-					<input formControlName="positionTitle" type="text"/>
-					</td>	
-				</tr>
-				<tr>
-					<td>Country</td>
-					<td>
-						<select formControlName="country">
-							<option></option>
-							<option value="BELGIUM">Belgium</option>
-							<option value="IRL">Ireland</option>
-							<option value="NETHERLANDS">Netherlands</option>
-							<option value="UK">UK</option>
-							<option value="EUROPE">EU</option>
-							<option value="WORLD">World</option>
-						</select>
-					</td>	
-				</tr>
-				<tr>
-					<td>Location</td>
-					<td>
-						<input formControlName="location" type="text"/>
-					</td>	
-				</tr>
-				<tr>
-					<td>Contract Type</td>
-					<td>
-						<select  formControlName="contractType">
-							<option></option>
-							<option value="CONTRACT">Contract</option>
-							<option value="PERM">Perm</option>
-							<option value="BOTH">Both</option>
-						</select>
-					</td>	
-				</tr>
-				<tr>
-					<td>
-						Skills
-					</td>
-					<td class="sugg-srch-bdy">
-						<input type="text" formControlName="skill"><button (click)="addOfferedPositionSkill()" class="btn btn-secondary add-skill-btn" *ngIf="!isAuthenticatedAsAdmin()">Add</button>
-						<div style="min-height:35px;">
-							<div class="selected-skill" *ngFor="let skill of requestedCandidateCoreSkills" (click)="removeRequestedCandidateSkill(skill)">{{skill}}</div>
-						</div>
-					</td>	
-				</tr>
-				<tr>
-					<td>Salary / Rate</td>
-					<td>
-						<input formControlName="renumeration" type="text"/>
-					</td>	
-				</tr>
-				<tr>
-					<td>Start Date</td>
-					<td>
-						<input formControlName="startDate" type="date"/>
-					</td>	
-				</tr>
-				<tr>
-					<td>Position Closing Date</td>
-					<td>
-						<input formControlName="positionClosingDate" type="date"/>
-					</td>	
-				</tr>
-				<tr>
-					<td>Description</td>
-					<td>
-						<textarea formControlName="description"></textarea>
-					</td>	
-				</tr>
-				<tr>
-					<td>Comments</td>
-					<td>
-						<textarea formControlName="comments"></textarea>
-					</td>	
-				</tr>
-			</table>
-		</form>
-	</div>
-	<!-- Open Position Details -->
-	<div *ngIf="showDemandDetails">
-		<div class="action-buttons">
-			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isMyOpenPosition()" (click)="editOpenPosition(activeOpenPosition)">Edit</button>
-			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isMyOpenPosition() && confirmDeleteOpenPosition != activeOpenPosition.id"  (click)="deleteMyOpenPosition(activeOpenPosition.id)">Delete</button>
-			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}} small-action-btn-confirm-del " *ngIf="isMyOpenPosition() && confirmDeleteOpenPosition === activeOpenPosition.id" (click)="applyDeleteMyOpenPosition(activeOpenPosition.id)">Confirm</button>
-			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="showOpenPositions()">Back</button>
-		</div>
-		<div class="left-box-container {{mobileListingLeftPaneContainer}}">
-			<div>
-      			<h1 *ngIf="isMobile" class="listing-view-title {{mobileListingViewTitle}}">{{activeOpenPosition.positionTitle}}</h1>
-      			<div class="left-box {{mobileLeftBox}}" style="float:left;">
-     				<div>
-     					<img class="profile-photo-details" *ngIf="!isMobile && recruiterProfile?.profilePhoto?.imageBytes" id='base64image' src='data:image/jpeg;base64, {{recruiterProfile?.profilePhoto?.imageBytes}}' />
-						<div *ngIf="!recruiterProfile?.profilePhoto?.imageBytes && !isMobile" class="profile-photo-details material-icons person ">
-							<span style="font-size:300px;color:green;">person</span>
-						</div>
-						<br>
-						<br>
-						<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" style="width:98%;margin-left:0px;;margin-right:10px;background:grey;" (click)="contactRecruiter()" *ngIf="isMyOpenPosition()" disabled>Contact</button>
-						<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" style="width:98%;margin-left:0px;;margin-right:10px;;background:green;" (click)="contactRecruiter()" *ngIf="!isMyOpenPosition()">Contact</button>
-						<br>
-     				</div>
-     			</div>
-     			<div class="left-box {{mobileLeftBox}}" *ngIf="activeOpenPosition?.recruiter?.recruiterName">
-     				<h5>Requested By</h5>
-     				<div class="left-box-body">
-      					<table>
-    						<tr>
-    							<th>Name</th>
-    							<td>{{activeOpenPosition?.recruiter?.recruiterName}}</td>
-    						</tr>
-    						<tr>
-    							<th>Company</th>
-    							<td>{{activeOpenPosition?.recruiter?.companyName}}</td>
-    						</tr>
-    					</table>
-   					</div>
-     			</div>
-     			<div class="left-box {{mobileLeftBox}}" *ngIf="activeOpenPosition.country || activeOpenPosition.location">
-					<h5>Location</h5>
-					<div class="left-box-body">
-						<table>
-							<tr *ngIf="activeOpenPosition.country">
-								<th>Country</th>
-								<td>{{getCountryCode(activeOpenPosition.country)}}</td>
-							</tr>
-							<tr *ngIf="activeOpenPosition.location">
-								<th>City</th>
-								<td>{{activeOpenPosition.location}}</td>
-							</tr>
-						</table>
-					</div>
+		<!-- Open Position Details -->
+		<div *ngIf="showDemandDetails">
+			<div class="action-buttons">
+				<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isMyOpenPosition()" (click)="editOpenPosition(activeOpenPosition)">Edit</button>
+				<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isMyOpenPosition() && confirmDeleteOpenPosition != activeOpenPosition.id"  (click)="deleteMyOpenPosition(activeOpenPosition.id)">Delete</button>
+				<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}} small-action-btn-confirm-del " *ngIf="isMyOpenPosition() && confirmDeleteOpenPosition === activeOpenPosition.id" (click)="applyDeleteMyOpenPosition(activeOpenPosition.id)">Confirm</button>
+				<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="showOpenPositions()">Back</button>
+			</div>
+			<div class="left-box-containerX {{mobileListingLeftPaneContainer}}X">
+				<!-- Left Pane -->
+				<app-candidate-info-box [config]="infoItemConfig" (openContactBoxEvent)="contactRecruiter()"></app-candidate-info-box>
+      		</div>
+			<div class="desc-body {{mobileDescBody}}">
+      			<div class="listing-view-div">
+					<h1 *ngIf="!isMobile" class="listing-view-title">{{activeOpenPosition.positionTitle}}</h1>
+					<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
 				</div>
-				<div class="left-box {{mobileLeftBox}}" *ngIf="activeOpenPosition.skills.length > 0">
-  					<h5>Skills</h5>
-  					<div class="left-box-body">
-						<table>
-							<tr>
-								<td><span class="skill" *ngFor="let skill of activeOpenPosition.skills">{{skill}}</span></td>
-							</tr>
-						</table>
-					</div>
-  				</div>
-	        	<div class="left-box {{mobileLeftBox}}" *ngIf="activeOpenPosition.contractType || activeOpenPosition.startDate || activeOpenPosition.renumeration">
-					<h5>Conditions</h5>
-					<div class="left-box-body">
-						<table>
-							<tr *ngIf="activeOpenPosition.contractType">
-								<th>Contract Type</th>
-								<td>{{getContractType(activeOpenPosition.contractType)}}</td>
-							</tr>
-							<tr *ngIf="activeOpenPosition.startDate">
-								<th>Start Date</th>
-								<td>{{activeOpenPosition.startDate}}</td>
-							</tr>
-							<tr *ngIf="activeOpenPosition.renumeration">
-								<th>Rate/Salary</th>
-								<td>{{activeOpenPosition.renumeration}}</td>
-							</tr>
-						</table>
-					</div>
-				</div>	
-			</div>
-		</div>
-		<div class="desc-bdy {{mobileDescBody}}">
-      		<div class="listing-view-div">
-				<h1 *ngIf="!isMobile" class="listing-view-title">{{activeOpenPosition.positionTitle}}</h1>
-				<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
-			</div>
-			<div>
 				<div>
-					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeOpenPosition.description}}</pre>
+					<div>
+						<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeOpenPosition.description}}</pre>
+					</div>
 				</div>
-			</div>
-			<div *ngIf="activeOpenPosition.comments">
-				<h1 *ngIf="isMobile" class="listing-view-title">Comments</h1>
-				<div>
-					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeOpenPosition.comments}}</pre>
+				<div *ngIf="activeOpenPosition.comments">
+					<h1 *ngIf="isMobile" class="listing-view-title">Comments</h1>
+					<div>
+						<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeOpenPosition.comments}}</pre>
+					</div>
 				</div>
+				<div class="candidate-view-div-footer"></div>
 			</div>
-			<div class="candidate-view-div-footer"></div>
 		</div>
 	</div>
 </div>
-
 
 <dialog #feedbackBox>
 	<div class="modal-header">
