--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -1,187 +1,193 @@
-<div class=".container m-2">
+<div class="page">
 	<div>
-	
-		<!-- Action buttons -->
-		<div class="action-buttons">
-			<button class="btn btn-secondary btnRight" (click)="refreshData()" download>Refresh</button>
-		</div>
-			
-		<ul class="nav nav-tabs">
-		  <li class="nav-item">
-		    <span class="nav-link statsChartTab" (click)="switchTab('logins')">Logins</span>
-		  </li>
-		  <li class="nav-item">
-		    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
-		  </li>
-		   <li class="nav-item statsChartTab">
-		    <span class="nav-link" (click)="switchTab('listings')">Listings</span>
-		  </li>
-		  <li class="nav-item statsChartTab">
-		    <span class="nav-link" (click)="switchTab('marketplace')">Marketplace</span>
-		  </li>
-		  <li class="nav-item statsChartTab">
-		    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
-		  </li>
-		  <li class="nav-item statsChartTab">
-		    <span class="nav-link" (click)="switchTab('newCandidateStats')">New Candidate Stats</span>
-		  </li>
-		</ul>
 		
-		<!--  Define charts -->
-		<div >
-			<div class="stat-canvas ">
-				<!-- Logins -->
-				<div *ngIf="showStatsLogins">
-					<h3>Logins</h3>
-					<button (click)="switchLoginStats('year')">Year</button>
-					<button (click)="switchLoginStats('3months')">3 Months</button>
-					<button (click)="switchLoginStats('week')">Week</button>
-				</div>
-				<!-- Downloads -->
-				<div *ngIf="showStatsDownloads" style="margin-bottom:45px;">
-					<h3>Daily downloads</h3>
-				</div>
-				<!-- Marketplace -->
-				<div class="chart-wrapper" *ngIf="showMarketplaceStats">			
-					<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
-					<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
-					<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
-				</div>
-				<!-- Availability -->
-				<div class="chart-wrapper" *ngIf="showStatsAvailability">
-					<h5>Available by Function</h5>
-				</div>
-				<!-- New Candidate Stats -->
-				<div class="action-buttons" *ngIf="showNewCandidates">
-					<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidates()" 		download>Show New Candidates</button>
-					<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidateStats()" 	download>Show New Candidate Stats</button>
-				</div>	
-				<div class="statChartDiv {{statChartDivMobile}}">
-					<canvas  id="leftChart" >{{ leftChart }}</canvas>	
-				</div>
+		<!-- Nav options -->
+		<div class="nav-tabs-bar">	
+			<ul class="nav nav-tabs">
+			  <li class="nav-item">
+			    <span class="nav-link statsChartTab" (click)="switchTab('logins')">Logins</span>
+			  </li>
+			  <li class="nav-item">
+			    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
+			  </li>
+			   <li class="nav-item statsChartTab">
+			    <span class="nav-link" (click)="switchTab('listings')">Listings</span>
+			  </li>
+			  <li class="nav-item statsChartTab">
+			    <span class="nav-link" (click)="switchTab('marketplace')">Marketplace</span>
+			  </li>
+			  <li class="nav-item statsChartTab">
+			    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
+			  </li>
+			  <li class="nav-item statsChartTab">
+			    <span class="nav-link" (click)="switchTab('newCandidateStats')">New Candidate Stats</span>
+			  </li>
+			</ul>
+		</div>
+		
+		<div class="page-body">
+	
+			<!-- Action buttons -->
+			<div class="action-buttons">
+				<button class="btn btn-secondary btnRight" (click)="refreshData()" download>Refresh</button>
 			</div>
-			
-			<div class="stat-canvas">
-				<!-- Logins -->
-				<div *ngIf="showStatsLogins">
-					<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
-					<button (click)="switchUserStats('week')">This Week</button>
-					<button (click)="switchUserStats('today')">Today</button>
-				</div>	
-					
-				<!-- Downloads -->
-				<div *ngIf="showStatsDownloads">
-					<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
-					<button (click)="switchChartData('week')">This week</button>
-					<button (click)="switchChartData('day')">Today</button>
+				
+			<!--  Define charts -->
+			<div >
+				<div class="stat-canvas ">
+					<!-- Logins -->
+					<div *ngIf="showStatsLogins">
+						<h3>Logins</h3>
+						<button (click)="switchLoginStats('year')">Year</button>
+						<button (click)="switchLoginStats('3months')">3 Months</button>
+						<button (click)="switchLoginStats('week')">Week</button>
+					</div>
+					<!-- Downloads -->
+					<div *ngIf="showStatsDownloads" style="margin-bottom:45px;">
+						<h3>Daily downloads</h3>
+					</div>
+					<!-- Marketplace -->
+					<div class="chart-wrapper" *ngIf="showMarketplaceStats">			
+						<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
+						<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
+						<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
+					</div>
+					<!-- Availability -->
+					<div class="chart-wrapper" *ngIf="showStatsAvailability">
+						<h5>Available by Function</h5>
+					</div>
+					<!-- New Candidate Stats -->
+					<div class="action-buttons" *ngIf="showNewCandidates">
+						<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidates()" 		download>Show New Candidates</button>
+						<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidateStats()" 	download>Show New Candidate Stats</button>
+					</div>	
+					<div class="statChartDiv {{statChartDivMobile}}">
+						<canvas  id="leftChart" >{{ leftChart }}</canvas>	
+					</div>
 				</div>
-				<!-- Listings -->
-				<div *ngIf="showStatsListings">
-					<div class="chart-wrapper">
+				
+				<div class="stat-canvas">
+					<!-- Logins -->
+					<div *ngIf="showStatsLogins">
+						<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
+						<button (click)="switchUserStats('week')">This Week</button>
+						<button (click)="switchUserStats('today')">Today</button>
+					</div>	
+						
+					<!-- Downloads -->
+					<div *ngIf="showStatsDownloads">
+						<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
+						<button (click)="switchChartData('week')">This week</button>
+						<button (click)="switchChartData('day')">Today</button>
+					</div>
+					<!-- Listings -->
+					<div *ngIf="showStatsListings">
+						<div class="chart-wrapper">
+							<h5>Totals:</h5>
+							<table>
+								<tr>
+									<td>Listings viewed today</td>
+									<td>{{listingViewsToday}}</td>
+								</tr>
+								<tr>
+									<td>Listings viewed this week</td>
+									<td>{{listingViewsThisWeek}}</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+					<!-- Availability -->
+					<div class="chart-wrapper" *ngIf="showStatsAvailability">
 						<h5>Totals:</h5>
 						<table>
 							<tr>
-								<td>Listings viewed today</td>
-								<td>{{listingViewsToday}}</td>
-							</tr>
-							<tr>
-								<td>Listings viewed this week</td>
-								<td>{{listingViewsThisWeek}}</td>
+								<td>Active Users</td>
+								<td>{{totalNumberActiveCandidates}}</td>
 							</tr>
 						</table>
 					</div>
-				</div>
-				<!-- Availability -->
-				<div class="chart-wrapper" *ngIf="showStatsAvailability">
-					<h5>Totals:</h5>
-					<table>
-						<tr>
-							<td>Active Users</td>
-							<td>{{totalNumberActiveCandidates}}</td>
+					<!-- Weekly Stats -->
+					<div *ngIf="showNewCandidates && showNewCandidatesDiv">
+					<p>
+						New Candidates available
+					</p>
+					<br/>
+					<ul *ngFor="let candidate of newCandidates">
+						<li>{{countryToCode(candidate.country)}} - EXP: {{candidate.yearsExperience}} Years - {{candidate.functionDesc}}</li>	
+					</ul>
+					<br/>
+					<p>
+						https://www.arenella-ict.com
+					</p>
+					<p>
+						#available #looking #lookingforwork #itcandidates #ictkandidaten #candidate #kandidaat
+						#itjobboard #ictojobboard #beschikbaar #it #ict #opentowork #seeking 
+					</p>
+					</div>
+					<div *ngIf="showNewCandidates && showNewCandidateStatsDiv" class="stats-table">
+						<p>The following new candidates have been added:</p>
+						<table>
+						<tr *ngFor="let candidateStat of newCandidateStats">
+							<td class="new-candidate-table-td">{{candidateStat.count}}</td>  <td class="new-candidate-table-td">x</td> <td class="new-candidate-table-td">{{candidateStat.functionType}}</td>
 						</tr>
-					</table>
-				</div>
-				<!-- Weekly Stats -->
-				<div *ngIf="showNewCandidates && showNewCandidatesDiv">
-				<p>
-					New Candidates available
-				</p>
-				<br/>
-				<ul *ngFor="let candidate of newCandidates">
-					<li>{{countryToCode(candidate.country)}} - EXP: {{candidate.yearsExperience}} Years - {{candidate.functionDesc}}</li>	
-				</ul>
-				<br/>
-				<p>
-					https://www.arenella-ict.com
-				</p>
-				<p>
-					#available #looking #lookingforwork #itcandidates #ictkandidaten #candidate #kandidaat
-					#itjobboard #ictojobboard #beschikbaar #it #ict #opentowork #seeking 
-				</p>
-				</div>
-				<div *ngIf="showNewCandidates && showNewCandidateStatsDiv" class="stats-table">
-					<p>The following new candidates have been added:</p>
-					<table>
-					<tr *ngFor="let candidateStat of newCandidateStats">
-						<td class="new-candidate-table-td">{{candidateStat.count}}</td>  <td class="new-candidate-table-td">x</td> <td class="new-candidate-table-td">{{candidateStat.functionType}}</td>
-					</tr>
-					</table>
-				</div>
-				<div class="statChartDiv {{statChartDivMobile}}">
-					<canvas  id="rightChart">{{ rightChart }}</canvas>	
-				</div>
-			</div>
-		</div>
-
-		<!-- Logins -->		
-		<div *ngIf="showStatsLogins">
-					
-			<div class="chart-wrapper-page">		
-				
-				<div class="chart-wrapper">
-					<div class="login-table-view">
-						<table style="width:100%">
-							<thead>
-								<tr>
-									<th>User</th>
-								</tr>
-							</thead>
-							<tbody>  
-								<tr *ngFor="let user of recruiterLoginsChartLabels" (click)="switchUserStatsView('table', user)">
-									<td>{{user}}</td>
-								</tr>
-							</tbody>
 						</table>
 					</div>
+					<div class="statChartDiv {{statChartDivMobile}}">
+						<canvas  id="rightChart">{{ rightChart }}</canvas>	
+					</div>
 				</div>
-				<div class="chart-wrapper" >
-					<h3>Searches</h3>
-					<button (click)="switchUserStats('week')">This Week</button>
-					<button (click)="switchUserStats('today')">Today</button>
-					<div class="login-table-view">
-					<table style="width:100%">
-							<thead>
-								<tr>
-									<th>Country</th>
-									<th>Function</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr *ngFor="let search of recruiterStats.uniqueSearches">
-									<td *ngIf="search.country === 'NETHERLANDS'"  			class="flag-icon flag-icon-nl suggestion-flag-country listing-country"></td>
-									<td *ngIf="search.country === 'BELGIUM'"				class="flag-icon flag-icon-be suggestion-flag-country listing-country"></td>
-									<td *ngIf="search.country === 'UK'"						class="flag-icon flag-icon-gb suggestion-flag-country listing-country"></td>
-									<td *ngIf="search.country === 'REPUBLIC_OF_IRELAND'"	class="flag-icon flag-icon-ie suggestion-flag-country listing-country"></td>
-									<td>{{getFunctionLabel(search.function)}}</td>
-								</tr>
-							</tbody>
-						</table>
+			</div>
+	
+			<!-- Logins -->		
+			<div *ngIf="showStatsLogins">
 						
+				<div class="chart-wrapper-page">		
+					
+					<div class="chart-wrapper">
+						<div class="login-table-view">
+							<table style="width:100%">
+								<thead>
+									<tr>
+										<th>User</th>
+									</tr>
+								</thead>
+								<tbody>  
+									<tr *ngFor="let user of recruiterLoginsChartLabels" (click)="switchUserStatsView('table', user)">
+										<td>{{user}}</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="chart-wrapper" >
+						<h3>Searches</h3>
+						<button (click)="switchUserStats('week')">This Week</button>
+						<button (click)="switchUserStats('today')">Today</button>
+						<div class="login-table-view">
+						<table style="width:100%">
+								<thead>
+									<tr>
+										<th>Country</th>
+										<th>Function</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr *ngFor="let search of recruiterStats.uniqueSearches">
+										<td *ngIf="search.country === 'NETHERLANDS'"  			class="flag-icon flag-icon-nl suggestion-flag-country listing-country"></td>
+										<td *ngIf="search.country === 'BELGIUM'"				class="flag-icon flag-icon-be suggestion-flag-country listing-country"></td>
+										<td *ngIf="search.country === 'UK'"						class="flag-icon flag-icon-gb suggestion-flag-country listing-country"></td>
+										<td *ngIf="search.country === 'REPUBLIC_OF_IRELAND'"	class="flag-icon flag-icon-ie suggestion-flag-country listing-country"></td>
+										<td>{{getFunctionLabel(search.function)}}</td>
+									</tr>
+								</tbody>
+							</table>
+							
+						</div>
 					</div>
 				</div>
+				<div style="clear:both;margin-bottom:50px;"></div>
 			</div>
-			<div style="clear:both;margin-bottom:50px;"></div>
+			  
 		</div>
-		  
 	</div>
 </div>
